majority codes files are optimized